# Cube_Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  input.txt  main  main.cpp  main.h  moves.cpp
include/: color_clustering.h  color_detection.h  grid_overlay.h  kociemba.h  kociemba_string.h  webcam_capture.h
src/: main.cpp
src/solver/: color_clustering.cpp  kociemba.cpp
src/vision/: color_calibration.cpp  color_clustering.cpp  color_detection.cpp  grid_overlay.cpp  kociemba_string.cpp  test_webcam.cpp  webcam_capture.cpp
